<resources>
    <string name="app_name">Shoputaba</string>
    <string name="input_email">Input Email</string>
    <string name="input_password">Input Password</string>
    <string name="login">Login</string>
    <string name="do_not_have_an_account">Don\'t have an account?\u0020</string>
    <string name="sign_up">Sign Up</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="address">Address</string>
    <string name="input_name">Input Name</string>
    <string name="input_phone_number">Input Phone Number</string>
    <string name="re_input_password">Re-Input Password</string>
    <string name="input_street_name">Input Street Name</string>
    <string name="i_accept_the_terms_of_service_and_privacy_policy">I accept the Terms of Service and Privacy Policy</string>
    <string name="text_sign_up">Sign Up!</string>
    <string name="InsertCash">Cash</string>
    <string name="Sell">Manage selling</string>
    <string name="settingBriref">Setting profile</string>
    <string name="orderHistory">Buying history</string>
    <string name="changePassword">Change password</string>
    <string name="insertCash">insertCash</string>
    <string name="manageSelling">manageSelling</string>
    <string name="settingProfile">settingProfile</string>
    <string name="buyingHistory">buyingHistory</string>
    <string name="editProfile">Edit profile</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="changeImage">Change Image</string>
    <string name="Name">Name</string>
    <string name="DOB">Date of birth</string>
    <string name="phone">Phone</string>
    <string name="location">Location</string>
    <string name="add_product">Add Product</string>
    <string name="name_product">Product Name:</string>
    <string name="product_brand">Product Brand:</string>
    <string name="product_quantity">Product Quantity:</string>
    <string name="color_product">Product Color:</string>
    <string name="product_type">Product Type:</string>
    <string name="product_images">Product Images:</string>
    <string name="select_image">Select Image</string>
    <string name="product_price">Product Price:</string>
    <string name="add">Add</string>
    <string name="choose_an_action">Choose an action</string>
    <string name="take_photo">Take Photo</string>
    <string name="select_from_library">Select from library</string>
    <string name="maximum_6_images">(Maximum 6 images)</string>
    <string name="input_your_date_of_birth">Input Your Date Of Birth</string>
    <string name="ok">OK</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="logout">Log out</string>
    <string name="btnConfirm">Confirm</string>
    <string name="btnCancel">Cancel</string>
    <string name="vnd">VND</string>
    <string name="quantity">Quantity:</string>
    <string name="String_brand">Brand:</string>
    <string name="String_color">Color:</string>
    <string name="details_product">Details Product</string>
    <string name="brand">Brand:</string>
    <string name="name">Name:</string>
    <string name="color">Color:</string>
    <string name="type">Type:</string>
    <string name="price">Price:</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="images">Images:</string>
    <string name="edit_product">Edit Product</string>
    <string name="save">Save</string>
    <string name="x">x</string>
    <string name="search">Search</string>
    <string name="search_products">Search products</string>
    <string name="sold_product">Sold Product</string>
    <string name="my_products">My Products</string>
    <string name="selling_history">Selling History</string>
    <string name="old_password">Old Password:</string>
    <string name="new_password">New Password:</string>
    <string name="re_new_password">Re-New Password:</string>
    <string name="cancel">Cancel</string>
    <string name="change_password">Change Password</string>
    <string name="input_old_password">Input Old Password</string>
    <string name="input_new_password">Input New Password</string>
    <string name="input_re_new_password">Re-Input New Password</string>
    <string-array name="product_type">
        <item>Accessories</item>
        <item>Bag</item>
        <item>Book</item>
        <item>Clothes</item>
        <item>Electronic Device</item>
        <item>Food</item>
        <item>Watch</item>
        <item>Laptop</item>
        <item>Vehicles</item>
        <item>Phone</item>
        <item>Shoe</item>
        <item>Toy</item>
        <item>Technological</item>
        <item>Others</item>
    </string-array>
    <string-array name="colors">
        <item>Blue</item>
        <item>Red</item>
        <item>Purple</item>
        <item>Yellow</item>
        <item>Pink</item>
        <item>Green</item>
        <item>Orange</item>
        <item>Lime</item>
        <item>Aqua</item>
        <item>Navy</item>
        <item>Coral</item>
        <item>Teal</item>
        <item>Mustard</item>
        <item>Violet</item>
        <item>Black</item>
        <item>White</item>
        <item>Gray</item>
        <item>Brown</item>
        <item>Indigo</item>
        <item>Amber</item>
        <item>Peach</item>
        <item>Maroon</item>
        <item>Salmon</item>
        <item>Silver</item>
        <item>Golden</item>
        <item>Wheat</item>
    </string-array>
</resources>
