<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:paddingBottom="10dp">

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/change_password"
        android:textColor="@color/colorText"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/old_password"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView30" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/new_password"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView34" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/re_new_password"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView37" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:gravity="center"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnCancel"
        app:layout_constraintTop_toTopOf="@+id/btnCancel" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_red"
        android:gravity="center"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@+id/btnSave"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView38" />

    <EditText
        android:id="@+id/editOldPassword"
        android:layout_width="220dp"
        android:layout_height="35dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/input_old_password"
        android:inputType="textPassword"
        android:paddingStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView34"
        app:layout_constraintStart_toStartOf="@+id/editNewPass"
        app:layout_constraintTop_toTopOf="@+id/textView34" />

    <EditText
        android:id="@+id/editNewPass"
        android:layout_width="220dp"
        android:layout_height="35dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/input_new_password"
        android:inputType="textPassword"
        android:paddingStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView37"
        app:layout_constraintStart_toStartOf="@+id/editRePass"
        app:layout_constraintTop_toTopOf="@+id/textView37" />

    <EditText
        android:id="@+id/editRePass"
        android:layout_width="220dp"
        android:layout_height="35dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/input_re_new_password"
        android:inputType="textPassword"
        android:paddingStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView38"
        app:layout_constraintStart_toEndOf="@+id/textView38"
        app:layout_constraintTop_toTopOf="@+id/textView38" />

</androidx.constraintlayout.widget.ConstraintLayout>