<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <ImageView
            android:id="@+id/imageProfile"
            android:layout_width="113dp"
            android:layout_height="108dp"
            android:layout_margin="10dp"
            android:src="@drawable/ic_profile_tab"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@color/colorBackgroundTabLayout"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageProfile"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/ic_attach_money_black_24dp"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/imageProfile"
            app:layout_constraintTop_toTopOf="@+id/guideline3" />

        <TextView
            android:id="@+id/txtCash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:textColor="@color/colorBackgroundTabLayout"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="@+id/textView9"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toTopOf="@+id/guideline3" />

        <Button
            android:id="@+id/btnInsertCash"
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/button_clone1"
            android:onClick="@string/insertCash"
            android:text="@string/InsertCash"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView9"
            app:layout_constraintStart_toEndOf="@+id/txtCash"
            app:layout_constraintTop_toTopOf="@+id/guideline3" />

        <Button
            android:id="@+id/btnManageSelling"
            android:layout_width="150dp"
            android:layout_height="25dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_clone1"
            android:onClick="@string/manageSelling"
            android:text="@string/Sell"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/imageProfile"
            app:layout_constraintTop_toTopOf="@+id/guideline3" />

        <Button
            android:id="@+id/btnBrief"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/button"
            android:text="@string/settingBriref"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.523"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline5" />

        <Button
            android:id="@+id/btnOrderHistory"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/button"
            android:text="@string/orderHistory"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnBrief" />

        <Button
            android:id="@+id/btnChangePassword"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/button"
            android:text="@string/changePassword"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnOrderHistory" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/button"
            android:text="@string/logout"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.522"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnChangePassword" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="52dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="123dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>